--- a/src/ImpjCodingAssesment/ImpjCodingAssesment.Api/ImpjCodingAssesment.Api.csproj
+++ b/src/ImpjCodingAssesment/ImpjCodingAssesment.Api/ImpjCodingAssesment.Api.csproj
@@ -1,14 +1,22 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CsvHelper" Version="33.0.1" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.1" />
+    <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="9.0.1" />
     <PackageReference Include="Scalar.AspNetCore" Version="2.0.11" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="Resources\SalesRecords.csv">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
