--- a/src/ImpjCodingAssesment/ImpjCodingAssesment.Api/Properties/launchSettings.json
+++ b/src/ImpjCodingAssesment/ImpjCodingAssesment.Api/Properties/launchSettings.json
@@ -7,7 +7,9 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "http://localhost:5277"
+      "applicationUrl": "http://localhost:5277",
+      "launchBrowser": true,
+      "launchUrl": "scalar/v1"
     },
     "https": {
       "commandName": "Project",
@@ -15,11 +17,14 @@
         "ASPNETCORE_ENVIRONMENT": "Development"
       },
       "dotnetRunMessages": true,
-      "applicationUrl": "https://localhost:7033;http://localhost:5277"
+      "applicationUrl": "https://localhost:7033;http://localhost:5277",
+      "launchBrowser": true,
+      "launchUrl": "scalar/v1"
     },
     "IIS Express": {
       "commandName": "IISExpress",
       "launchBrowser": true,
+      "launchUrl": "scalar/v1",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
